remove jetty things