@@ -21,37 +21,9 @@
 	
 	<property name="runtime.environment" value="development"/>
 	
-    <target name="jetty-demo-no-db">
-            <delete dir="war/WEB-INF/lib"/>
-            <artifact:mvn mavenHome="${maven.home}" fork="true">
-                <jvmarg value="-XX:MaxPermSize=256M" />
-                <jvmarg value="-Xmx512M" />
-                <jvmarg value="-Xdebug" />
-                <jvmarg value="-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n" />
-            	<jvmarg value="-javaagent:${spring.instrument.path}" />
-            	<jvmarg value="-Druntime.environment=${runtime.environment}" />
-                <arg value="compile"/>
-                <arg value="war:exploded"/>
-                <arg value="jetty:run"/>
-            </artifact:mvn>
-        </target>
 
-    <target name="jetty-demo" depends="start-db">
-        <delete dir="war/WEB-INF/lib"/>
-        <artifact:mvn mavenHome="${maven.home}" fork="true">
-            <jvmarg value="-XX:MaxPermSize=256M" />
-            <jvmarg value="-Xmx512M" />
-            <jvmarg value="-Xdebug" />
-            <jvmarg value="-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n" />
-            <jvmarg value="-javaagent:${spring.instrument.path}" />
-            <jvmarg value="-Druntime.environment=${runtime.environment}" />  
-            <arg value="compile"/>
-            <arg value="war:exploded"/>
-            <arg value="jetty:run"/>
-        </artifact:mvn>
-    </target>
 
-<target name="tomcat-demo" depends="start-db">
+<target name="tomcat-demo">
 	<echo message="hey, tomcat" />
     <delete dir="war/WEB-INF/lib"/>
     <artifact:mvn mavenHome="${maven.home}" fork="true" 
@@ -63,49 +35,6 @@
     <echo message="hey, tomcat done" />
 </target>
 
-    <target name="jetty-demo-jrebel" depends="start-db">
-        <delete dir="war/WEB-INF/lib"/>
-        <artifact:mvn mavenHome="${maven.home}" fork="true">
-            <jvmarg value="-XX:MaxPermSize=256M" />
-            <jvmarg value="-Xmx512M" />
-            <jvmarg value="-Xdebug" />
-            <jvmarg value="-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n" />
-            <jvmarg value="-Drebel.root=${project.root}" />
-            <jvmarg value="-Dlogs.dir=${logs.dir}" />
-            <jvmarg value="-noverify" />
-            <jvmarg value="-javaagent:${jrebel.path}" />
-            <jvmarg value="-javaagent:${spring.instrument.path}" />
-            <jvmarg value="-Druntime.environment=${runtime.environment}" />  
-            <arg value="compile"/>
-            <arg value="war:exploded"/>
-            <arg value="jetty:run"/>
-        </artifact:mvn>
-    </target>
-    
-    <target name="jetty-stop">
-        <artifact:mvn mavenHome="${maven.home}" fork="true">
-            <jvmarg value="-XX:MaxPermSize=256M" />
-            <jvmarg value="-Xmx512M" />
-            <arg value="jetty:stop"/>
-        </artifact:mvn>
-    </target>
 	
-	<target name="stop-all" depends="jetty-stop, stop-db"/>
-    
-    <!-- Project Reference Targets -->
-    <!-- build the application and create the war artifact -->
-    <target name="build-app">
-        <delete dir="war/WEB-INF/lib"/>
-        <artifact:mvn mavenHome="${maven.home}" fork="true">
-            <arg value="-Dmaven.test.skip=true"/>
-            <arg value="install"/>
-        </artifact:mvn>
-    </target>
-
-    <target name="start-db">
-    </target>
-
-    <target name="stop-db">
-    </target>
 
 </project>
